# perfspan

./: .gitignore  Cargo.toml  README.md  build.rs  rustfmt.toml
examples/: loop.rs  matmul.rs
scripts/: demo.sh
src/: lib.rs  main.rs  perf.rs
src/bpf/: perfspan.bpf.c  perfspan.h
tracing-perfspan/: Cargo.toml
tracing-perfspan/src/: lib.rs
