[package]
name = "perfspan"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.20", features = ["derive"] }
ctrlc = "3.4.5"
eyre = "0.6.12"
hashbrown = "0.15.1"
hdrhistogram = "7.5.4"
libbpf-rs = { version = "0.24.7", features = ["vendored"] }
libc = "0.2.164"
plain = "0.2.3"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }

[dev-dependencies]
tracing-perfspan = { path = "./tracing-perfspan" }
rand = "0.8.5"

[build-dependencies]
eyre = "0.6.12"
grev = "0.1.3"
libbpf-cargo = "0.24.7"
vmlinux = { git = "https://github.com/libbpf/libbpf-rs", tag = "v0.24.5"}

[features]
# default to vendoring, as i intend to use it only this way
default = ["libbpf-rs/vendored"]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
