[package]
name = "tracing-perfspan"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/dshulyak/perfspan"
license = "MIT"
description = """
Tracing layer to enable usdt probes for perfspan
"""

[dependencies]
probe = "0.5.1"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }